2009-07-26  Araki Ken  <arakiken@users.sf.net>

	* IME Window pursues cursor position.

	* Added: doc/ja/README.win32.

	* Supported multiple pty, startup options and configuration by 'main' file in win32.
	  x_term_manager.[ch], main.[ch] and x_main_config.[ch] are built in win32.
	  x_window_manager*.[ch] are removed and united to x_display*.[ch].
	  Removed: main_win32.c
	  Added: x_display_win32.c
	
	* Ucs property table is separated from libmkf as a shared library.
	  Added: mkf/libtbl/mkf_ucs_property.c and libmkf_ucsprop.la.
	  Moved: mkf/lib/table/mkf_ucs_*_property.table to mkf/libtbl/table/
	  Renamed: mkf/lib/mkf_map_loader.h to mkf_tblfunc_loader.h

	* kik_debug.h: Use __FILE__:__LINE__ instead of __FUNCTION__.
	
2009-07-17  Araki Ken  <arakiken@users.sf.net>

	* libtool: version up to 1.5.26
	  autoconf: version up to 2.63
	  (for win32 compilation.)
	
	* Separated mkf table from mkf as dynamic shared library(LIBDIR/mkf/libmkf_*.so).
	  (Added configure option --enable(disable)-dl-table)
	
	* Added scrollbar support in win32.
	  (Added x_simple_sb_view_win32.c)

	* x_window_win32.c: Apply min_{width|height} and {width|height}_inc
	                    when window resized.

	* *_color_*.[ch]: u_short changed to u_int8_t.

	* etc/mlterm/color: Supported rgb:RR/GG/BB format as value.

	* mlterm/ml_color.[ch]: Added ml_color_parse_rgb_name() function.

2009-07-11  Seiichi SATO  <seiichi@pylone.jp>

	* get rid of compiler warnings.

2009-07-11  Seiichi SATO  <seiichi@pylone.jp>

	* mkf/script/config.guess, kiklib/script/config.guess,
	  script/config.guess: updated (timestamp='2009-04-27')

	* mkf/script/config.sub, kiklib/script/config.sub,
	  script/config.sub: updated (timestamp='2009-04-17')

2009-07-11  Seiichi SATO  <seiichi@pylone.jp>

	* x_sb_screen.c, x_dnd.c: s/utf8_selection_notified/utf_selection_notified/
	(see x_window.h rev 1.42)

2009-06-30  Araki Ken  <arakiken@users.sf.net>

	* Supported "ESC ] 4 ; ... ; rgb:%02x/%02x/%02x BEL" sequence.
