@@ -1,5 +1,10 @@
 2009-07-26  Araki Ken  <arakiken@users.sf.net>
 
+	* x_display_win32.c: Implemented x_get_opened_displays().
+	  (Could be core dumped in time_proc(x_term_manager.c) without this modification.)
+
+2009-07-26  Araki Ken  <arakiken@users.sf.net>
+
 	* IME Window pursues cursor position.
 
 	* Added: doc/ja/README.win32.
